--- a/dotwitter/.htaccess
+++ b/dotwitter/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine on
-RewriteCond ${REQUEST_FILENAME} !-f
-RewriteCond ${REQUEST_FILENAME} !-d
+
+RewriteCond %{REQUEST_URI} !\.(png|jpg|gif)$
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
