--- a/dotwitter/public/.htaccess
+++ b/dotwitter/public/.htaccess
@@ -1,8 +1,12 @@
-RewriteEngine on
-
+RewriteEngine On
 RewriteCond %{REQUEST_URI} !\.(png|jpg|gif)$
-
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
 RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+
+# templates
+#RewriteRule ^$ /dotwitter/public/index.php [L]
+#RewriteRule ^(.*)$ /dotwitter/public/index.php?q=$1 [L,QSA]
+
+
